2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Cleaned up the handling of #@dispatch.
	Added lots of comments regarding the implementation of #@dispatch.
	Changed intra-procedure communication to use t.arg1 instead of
	arg2.  Removed some uses of t.arg1, t.lloc and proc as temporary
	variables.  Introduced temporary variables with hopefully
	descriptive names for clarification.  Replaced SCM_N?IMP by a more
	explicit predicate in some places.  Use SCM_INSTANCE_HASH instead
	of computing the expression explicitly.  Eliminate now unused
	label nontoplevel_cdrxbegin.

	* goops.h (SCM_INSTANCE_HASH): New macro.

	* objects.h (SCM_CMETHOD_FORMALS, SCM_CMETHOD_BODY): New macros.

2002-03-08  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* Makefile.am (bin_SCRIPTS): Revive this decl, w/ initial element
	"guile-snarf" moved back from `noinst_SCRIPTS'.

2002-03-08  Neil Jerram  <neil@ossau.uklinux.net>

	* srcprop.c (scm_set_source_property_x): If SRCPROPS obj already
	exists when adding a source property other than those that are
	handled explicitly, add the new property to the SRCPROPS obj's
	plist.

	* debug.h (SCM_MAX_FRAME_SIZE): Remove incorrect comment about use
	of SCM_MAX_FRAME_SIZE as a bit mask; it isn't used like this.

	* eval.c (SCM_CEVAL): Don't store scm_debug_eframe_size in
	debug.status.  It isn't needed, and it can overflow the bits
	reserved for it (which may lead to a segv or a GC abort).

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Cleaned up the handling of 'apply'.  Removed
	side-effecting operations from conditions and macro calls.
	Replaced SCM_N?IMP by a more explicit predicate in some places.
	Minimized the scope of some variables.

2002-03-02  Stefan Jahn  <stefan@lkcc.org>

	* convert.i.c: Fixed int <-> long conversions which would have
	failed if their sizes were different.

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Cleaned up the handling of 'if', 'let',